fix: addressing issue with roadmap items not showing in list

--- a/apps/common-capabilities/src/pages/roadmap/styles.css
+++ b/apps/common-capabilities/src/pages/roadmap/styles.css
@@ -26,7 +26,7 @@
   border: 2px solid rgb(87, 158, 69);
   background-color: rgb(231, 250, 227);
 }
-.roadMapList {
+.roadmapList {
   padding-right: 12px;
 }
 .left {
